--- a/lib/src/dashboard_component/dashboard_component.css
+++ b/lib/src/dashboard_component/dashboard_component.css
@@ -6,7 +6,7 @@
 }
 .header-custom{
     /*background: #15364c !important;*/
-    background: rgba(255, 255, 255, 0.9) !important;
+    background: rgba(255, 255, 255, 0.95) !important;
     /*background: #ffffff !important;*/
     color: #051c2d !important;
     position: fixed;
@@ -119,6 +119,14 @@ material-list-item:hover > material-icon {
 }
 .dropdown-toggle::after {
     content: none !important;
+}
+.material-header-row {
+    position: fixed !important;
+    width: 100% !important;
+    background: rgba(255, 255, 255, 0.95) !important;
+    /*background: #ffffff !important;*/
+    color: #051c2d !important;
+    margin: 0 !important;
 }
 
 
