--- a/lib/src/login_component/login_component.css
+++ b/lib/src/login_component/login_component.css
@@ -9,8 +9,16 @@ material-input {
     color: white;
 }
 .limiter {
-    width: 100%;
-    margin: 0 auto;
+    width: 400px;
+    max-width: 400px;
+    min-width: 250px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    height: max-content;
 }
 
 .container-login100 {
@@ -33,7 +41,7 @@ material-input {
     z-index: 1;
 }
 
-.container-login100::before {
+/*.container-login100::before {
     content: "";
     display: block;
     position: absolute;
@@ -43,7 +51,7 @@ material-input {
     top: 0;
     left: 0;
     background-color: rgba(0,0,0,0.65);
-}
+}*/
 
 .wrap-login100 {
     width: 390px;
@@ -59,7 +67,7 @@ material-input {
 
 .login100-form {
     width: 100%;
-    border-radius: 10px;
+    border-radius: 20px;
     background-color: #fff;
 }
 
