--- a/lib/src/dashboard_component/create_post_component/create_post_component.css
+++ b/lib/src/dashboard_component/create_post_component/create_post_component.css
@@ -147,6 +147,38 @@
     border-radius: 5px !important;
 }
 
+.btn-comm {
+    color: #fff;
+    background-color: #30cfc0!important;
+}
+.btn-floating {
+    position: relative;
+    z-index: 1;
+    display: inline-block;
+    padding: 0;
+    margin: 10px;
+    overflow: hidden;
+    cursor: pointer;
+    border-radius: 50%;
+    box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
+    transition: all .2s ease-in-out;
+    width: 47px;
+    height: 47px;
+}
+a, a:hover {
+    transition: all .2s ease-in-out;
+    text-decoration: none;
+}
+.b-icon:hover {
+    background: #f0f0f0;
+    border-radius: 5px;
+}
+#delete-button:hover {
+    background: #eeeeee;
+    border-radius: 2px;
+}
+
+
 material-chip {
     font-size: x-small !important;
     color: white;
@@ -251,19 +283,19 @@ material-chip {
 }
 
 @media (max-width: 567px) {
-    .d-post-text {
-        display: block;
-        white-space: nowrap;
-        overflow: hidden;
-        width: 1rem !important;
-        text-overflow: ellipsis;
-    }
-
     .file-upload {
         margin: -30px;
     }
 }
-
+@media (max-width: 368px) {
+    .d-post-text {
+        display: block;
+        white-space: nowrap;
+        overflow: hidden;
+        width: 5rem !important;
+        text-overflow: ellipsis;
+    }
+}
 
 @keyframes fade-alert {
     from {
