--- a/lib/src/dashboard_component/dashboard_component.css
+++ b/lib/src/dashboard_component/dashboard_component.css
@@ -108,6 +108,35 @@ material-list-item:hover > material-icon {
 
     height: 100vh;
 }
+.login {
+    color: #00c800 !important;
+    box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08) !important;
+}
+.log-text {
+    display: none;
+}
+#power-button:hover ~ .log-text {
+    display: block;
+    position: absolute;
+    right: 10px;
+
+    margin-top: 20px;
+    /*margin-right: 20px;*/
+
+    font-size: 12px;
+    text-transform: capitalize;
+    padding: 5px 10px;
+
+    background: white;
+    box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08) !important;
+
+    transition: cubic-bezier(0.4, 0.9, -0.9, -0.4);
+
+    border-radius: 5px;
+    color: #4e555b;
+    z-index: 10000;
+    width: max-content;
+}
 #app1-drawer,
 #app-drawer {
     height: 100vh;
@@ -129,6 +158,45 @@ material-list-item:hover > material-icon {
 #user-icon {
     position: fixed !important;
     left: 95vw !important;
+}
+
+.dialog-box {
+    width: 300px;
+    min-width: 150px;
+    max-width: 300px;
+
+    /*height: 300px;*/
+    /*min-height: 150px;*/
+    /*max-height: 300px;*/
+    height: max-content;
+
+    padding: 10px;
+
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+
+    margin: auto;
+
+    z-index: 900000;
+
+    opacity: 1 !important;
+
+    /*box-shadow: 0px 2px 1px 0px #dbdbdb, 0px 2px 2px 0px #dedede;*/
+
+    background: rgb(255, 255, 255) !important;
+    filter: blur(0px) !important;
+
+
+}
+div[display="false"] {
+    display: none !important;
+}
+
+div[display="true"] {
+    display: block !important;
 }
 
 @media (max-width: 576px) {
