--- a/lib/src/login_component/login_component.scss
+++ b/lib/src/login_component/login_component.scss
@@ -14,8 +14,7 @@ material-input {
     border-radius: 20px;
     z-index: 1001;
     width: 300px;
-    height: 40px;
-    padding: 4px;
+    height: max-content;
     margin: 0 10vw;
 
     text-align: center;
