--- a/lib/src/signup_component/signup_component.css
+++ b/lib/src/signup_component/signup_component.css
@@ -112,8 +112,7 @@ button:hover:before {
     border-radius: 20px;
     z-index: 1001;
     width: 300px;
-    height: 40px;
-    padding: 4px;
+    height: max-content;
     margin: 0 10vw;
 
     text-align: center;
