--- a/lib/src/login_component/login_component.scss
+++ b/lib/src/login_component/login_component.scss
@@ -21,7 +21,7 @@ material-input {
 }
 
 .limiter {
-    width: 400px;
+    width: 100%;
     max-width: 400px;
     min-width: 250px;
     position: absolute;
