Table respnsiveness added

--- a/lib/src/dashboard_component/view_post_component/view_post_component.css
+++ b/lib/src/dashboard_component/view_post_component/view_post_component.css
@@ -1,4 +1,11 @@
-.d-post-text {
+.d-resp-text {
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    width: inherit;
+    text-overflow: ellipsis;
+}
+.d-resp-co {
     display: block;
     white-space: nowrap;
     overflow: hidden;
@@ -13,13 +20,6 @@
 }
 .br-20 {
     border-radius: 20px !important;
-}
-.d-post-tags {
-    display: block;
-    white-space: nowrap;
-    overflow: hidden;
-    width: 1rem;
-    text-overflow: ellipsis;
 }
 .tag::after {
     content: ' ';
@@ -51,5 +51,179 @@
 #view-box {
     height: 400px;
     max-height: 400px;
-    overflow-x: hidden;
+    overflow-x: scroll;
+}
+
+.limiter {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.container-table100 {
+    width: 100%;
+    min-height: 100vh;
+    background: #c4d3f6;
+
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 33px 30px;
+}
+
+.wrap-table100 {
+    width: 960px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.table {
+    width: 100%;
+    display: table;
+    margin: 0;
+}
+
+@media screen and (max-width: 768px) {
+    .table {
+        display: block;
+    }
+}
+
+.t-row {
+    display: table-row;
+    background: #fff;
+}
+
+.t-row.header {
+    color: #ffffff;
+    background: #192635;
+}
+
+@media screen and (max-width: 768px) {
+    .t-row {
+        display: block;
+    }
+
+    .t-row.header {
+        padding: 0;
+        height: 0px;
+    }
+
+    .t-row.header .cell {
+        display: none;
+    }
+
+    .t-row .cell:before {
+        font-family: Nyata;
+        font-size: 12px;
+        color: #808080;
+        line-height: 1.2;
+        text-transform: uppercase;
+        font-weight: unset !important;
+
+        margin-bottom: 13px;
+        content: attr(data-title);
+        min-width: 98px;
+        display: block;
+    }
+}
+
+.cell {
+    display: table-cell;
+}
+
+@media screen and (max-width: 768px) {
+    .cell {
+        display: block;
+    }
+}
+
+.t-row .cell {
+    font-family: "Product Sans";
+    font-size: 15px;
+    color: #666666;
+    line-height: 1.2;
+    font-weight: unset !important;
+
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #f2f2f2;
+}
+
+.t-row.header .cell {
+    font-family: Nyata;
+    font-size: 18px;
+    color: #fff;
+    line-height: 1.2;
+    font-weight: unset !important;
+
+    padding-top: 19px;
+    padding-bottom: 19px;
+}
+
+.t-row .cell:nth-child(1) {
+    width: 360px;
+    padding-left: 40px;
+}
+
+.t-row .cell:nth-child(2) {
+    width: 160px;
+}
+
+.t-row .cell:nth-child(3) {
+    width: 250px;
+}
+
+.t-row .cell:nth-child(4) {
+    width: 190px;
+}
+
+
+.table, .t-row {
+    width: 100% !important;
+}
+
+.t-row:hover {
+    background-color: #e2e2e2;
+    cursor: pointer;
+    color: black !important;
+}
+
+.selected {
+    background-color: #e2e2e2 !important;
+}
+@media (max-width: 768px) {
+    .t-row {
+        /*border-bottom: 1px solid #f2f2f2;*/
+        padding-bottom: 18px;
+        padding-top: 30px;
+        padding-right: 15px;
+        margin: 0;
+    }
+
+    .t-row .cell {
+        border: none;
+        padding-left: 30px;
+        padding-top: 16px;
+        padding-bottom: 16px;
+    }
+    .t-row .cell:nth-child(1) {
+        padding-left: 30px;
+    }
+
+    .t-row .cell {
+        font-family: Poppins-Regular;
+        font-size: 18px;
+        color: #555555;
+        line-height: 1.2;
+        font-weight: unset !important;
+    }
+
+    .table, .t-row, .cell {
+        width: 100% !important;
+    }
 }
