--- a/web/styles.css
+++ b/web/styles.css
@@ -291,6 +291,7 @@ body {
 #post_alert {
   margin: 0px auto;
   position: fixed;
+
   transition: all 0.5s ease-in-out 0s;
   z-index: 1080;
   top: 70px;
@@ -321,6 +322,16 @@ body {
 }
 .btn-white:not(:disabled):not(.disabled).active:focus,.btn-white:not(:disabled):not(.disabled):active:focus,.show>.btn-white.dropdown-toggle:focus {
   box-shadow: 0 0 0 0 rgba(255,255,255,.5);
+}
+
+@media screen and (max-width: 576px) {
+  #post_alert {
+    position: fixed;
+    max-width: 350px;
+    min-width: 300px;
+    width: 350px;
+    margin: 0 auto;
+  }
 }
 
 
