Updated login and signup component

--- a/lib/src/login_component/login_component.scss
+++ b/lib/src/login_component/login_component.scss
@@ -73,7 +73,11 @@ material-input {
     background: transparent;
 }
 
-
+.see {
+    position: absolute;
+    margin-top: 20px;
+    margin-left: -20px;
+}
 /*------------------------------------------------------------------
 [ Form ]*/
 
