--- a/lib/src/dashboard_component/view_post_component/view_post_component.scss
+++ b/lib/src/dashboard_component/view_post_component/view_post_component.scss
@@ -86,6 +86,9 @@
     display: table;
     margin: 0;
 }
+.panel {
+    border-radius: 20px !important;
+}
 
 @media screen and (max-width: 768px) {
     .table {
