--- a/lib/src/dashboard_component/dashboard_component.css
+++ b/lib/src/dashboard_component/dashboard_component.css
@@ -37,55 +37,60 @@
     top: 90% !important;
     left: 90% !important;
 }
-
+.nav-link:hover {
+    color: #16181b !important;
+}
 .dropdwn-content {
     display: none;
     /*position: absolute;*/
     background-color: #ffffff;
     min-width: 160px;
+    width: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 
     /*left: 35px;*/
     margin: 15px;
 
-    text-align: center;
+    text-align: left;
 }
 .dropdwn:hover .dropdwn-content {
     display: block;
 }
+.br-20 {
+    border-radius: 20px;
+}
+.icon-circle {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
 
-.n-list-item1:hover {
-    border-radius: 20px !important;
-    background: #f5f5f5 !important;
-    color: #0c6bd0 !important;
-    animation-name: shift;
-    animation-delay: 50ms;
-    animation-fill-mode: forwards;
-    animation-iteration-count: 1;
-    animation-direction: normal;
+    background: #0b81e5;
+    display: inline-flex;
+
+    color: white;
+
+    justify-content: center;
+    align-items: center;
 }
-.d-icon {
-    display: none;
-    margin-top: -27px;
-    padding-right: 10px;
-}
-.n-list-item1:hover .d-icon {
-    display: block;
+.background {
+    margin: 0;
+    padding: 0;
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-image: url("img/dropdown-1.png");
+
+    filter: brightness(0.8);
+
+    width: 100%;
+    height: 100px;
+
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 
-@keyframes shift {
-    from {
-        text-align: center;
-    }
-    to {
-        text-align: left;
-    }
-}
-
-.n-list-item:active,
-.n-list-item:hover,
-.n-list-item:focus,
 material-list-item:active,
 material-list-item:hover,
 material-list-item:focus {
