--- a/lib/src/dashboard_component/dash_home_component/dash_home_component.scss
+++ b/lib/src/dashboard_component/dash_home_component/dash_home_component.scss
@@ -18,6 +18,15 @@
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
+.image-thumbnail {
+  width: 40px;
+  height: 30px;
+}
+.thumbnail {
+  height: 30px !important;
+  border-radius: 3px;
+}
+
 .progress .sr-only {
   width: auto;
   height: 20px;
@@ -66,7 +75,7 @@
   overflow-y: scroll;
 }
 .post-data-card {
-  height: 185px;
+  /*height: 185px;*/
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
 }
