--- a/lib/src/dashboard_component/dashboard_component.css
+++ b/lib/src/dashboard_component/dashboard_component.css
@@ -54,9 +54,9 @@
 
     text-align: left;
 }
-.dropdwn:hover .dropdwn-content {
+/*.dropdwn:hover .dropdwn-content {
     display: block;
-}
+}*/
 .br-20 {
     border-radius: 20px;
 }
