--- a/lib/src/dashboard_component/dashboard_component.css
+++ b/lib/src/dashboard_component/dashboard_component.css
@@ -80,9 +80,9 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-image: url("img/dropdown-1.png");
+    background-image: url("img/dropdown-10.svg");
 
-    filter: brightness(0.8);
+    filter: brightness(0.9);
 
     width: 100%;
     height: 100px;
