--- a/web/styles.css
+++ b/web/styles.css
@@ -301,9 +301,15 @@ body {
 
   transition: all 0.5s ease-in-out 0s;
   z-index: 1080;
-  top: 70px;
+  top: 0px;
   left: 0px;
   right: 0px;
+
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
+.w-auto {
+  width: max-content !important;
 }
 .btn-white {
   color: #212529;
@@ -445,13 +451,13 @@ body {
   box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07) !important;
 }
 @media screen and (max-width: 576px) {
-  #post_alert {
+  /*#post_alert {
     position: fixed;
     max-width: 350px;
     min-width: 300px;
     width: 350px;
     margin: 0 auto;
-  }
+  }*/
 }
 
 
