--- a/lib/src/dashboard_component/post_engagement_component/post_engagement_component.css
+++ b/lib/src/dashboard_component/post_engagement_component/post_engagement_component.css
@@ -34,11 +34,159 @@
 .post-container {
     height: inherit;
 }
+.chat-container {
+    max-height: inherit;
+}
+.chat-box {
+    height: 400px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+.see-older-messages {
+    border-radius: 20px;
+    cursor: pointer;
+}
+.see-older-messages:hover {
+    background-color: rgb(0, 98, 255);
+    color: white;
+    font-weight: bold;
+}
+.receiver {
+    max-width: 57%;
+    width: fit-content;
+    height: fit-content;
+
+    margin-right: auto !important;
+
+    position: relative;
+
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+
+    background-color: white;
+    border: 1px solid #ececec;
+}
+.forward-call {
+    opacity: 0.7;
+    display: none;
+}
+.receiver:hover > .forward-call,
+.sender:hover > .forward-call {
+    display: block;
+}
+.sender {
+    max-width: 70%;
+    width: fit-content;
+    height: fit-content;
+
+    margin-left: auto !important;
+
+    position: relative;
+
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+
+    background-color: rgb(0, 98, 255);
+    color: white;
+}
+.receiver > .date {
+    position: absolute;
+    left: 0;
+    top: auto;
+}
+.sender > .issuer {
+    display: none !important;
+}
+.sender > .date {
+    position: absolute;
+    right: 0;
+    top: auto;
+}
+.nt-circle {
+    width: 1.5rem;
+    height: 1.5rem;
+}
+.chat-engine {
+    height: initial;
+}
+.back-arrow {
+    display: none;
+}
 @media screen and (max-width: 567px) {
     .main-container {
         height: 85vh;
     }
     .post-card-container {
         height: 75vh;
+    }
+    .chat-box {
+        height: 70vh;
+    }
+    .back-arrow {
+        display: block;
+    }
+    .chat-container {
+        animation-name: slide-out;
+        animation-iteration-count: 1;
+        animation-fill-mode: forwards;
+        animation-duration: 200ms;
+        position: relative;
+    }
+    .post-container {
+        animation-name: slide-in;
+        animation-iteration-count: 1;
+        animation-fill-mode: forwards;
+        animation-duration: 200ms;
+        position: relative;
+    }
+}
+@media screen and (max-width: 768px) {
+    .chat-container {
+        animation-name: slide-out;
+        animation-iteration-count: 1;
+        animation-fill-mode: forwards;
+        animation-duration: 200ms;
+        position: relative;
+    }
+    .post-container {
+        animation-name: slide-in;
+        animation-iteration-count: 1;
+        animation-fill-mode: forwards;
+        animation-duration: 200ms;
+        position: relative;
+    }
+}
+@keyframes slide-in {
+    from {
+        left: -500px;
+    }
+    to {
+        left: 0;
+    }
+}
+@keyframes slide-out {
+    from {
+        right: -500px;
+    }
+    to {
+        right: 0;
+    }
+}
+@-webkit-keyframes slide-in {
+    from {
+        left: -500px;
+    }
+    to {
+        left: 0;
+    }
+}
+@-webkit-keyframes slide-out {
+    from {
+        right: -500px;
+    }
+    to {
+        right: 0;
     }
 }
