--- a/lib/src/dashboard_component/dashboard_component.css
+++ b/lib/src/dashboard_component/dashboard_component.css
@@ -151,14 +151,21 @@ material-list-item:hover > material-icon {
 }
 
 /*noinspection ALL*/
+#html-body {
+
+}
 #app-body {
     margin: 0;
     padding: 0;
 
-    /*background-image: url("img/app-bg-05.jpg");*/
-    background-position: center;
+    background: url("img/app-bg-01.jpg") no-repeat center center fixed;
+
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
 
+    width: 100%;
     height: 100vh;
 }
 .login {
