--- a/lib/src/login_component/login_component.scss
+++ b/lib/src/login_component/login_component.scss
@@ -27,9 +27,9 @@ material-input {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-image: url("img/postit_background.png");
+    background-image: url("img/login-img.jpg");
 
-    filter: brightness(0.5);
+    filter: brightness(1);
 
     width: 100%;
     height: 100vh;
