--- a/lib/src/dashboard_component/dashboard_component.css
+++ b/lib/src/dashboard_component/dashboard_component.css
@@ -11,6 +11,7 @@
     /*color: #051c2d !important;*/
     /*position: fixed;*/
 }
+
 #search {
     height: 40px;
     border: 1px solid #093d61;
@@ -166,7 +167,7 @@ material-list-item:hover > material-icon {
     background-size: cover;*/
 
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 .login {
     color: #00c800 !important;
@@ -201,7 +202,7 @@ material-list-item:hover > material-icon {
 #app-drawer {
     height: 100vh;
     /*background: rgba(255, 255, 255, 0.80) url("img/side_bg.png");*/
-    margin: 10px;
+    padding: 10px;
 
 }
 .dropdown-toggle::after {
@@ -210,11 +211,8 @@ material-list-item:hover > material-icon {
 .material-header-row {
     position: fixed !important;
     width: 100% !important;
-    background: rgb(255, 255, 255) !important;
-    /*background: #ffffff !important;*/
-    color: #051c2d !important;
     margin: 0 !important;
-    border-bottom: 1px solid #d6d5d5;
+    border-bottom: 1px solid rgba(214, 213, 213, .4);
 }
 #user-icon {
     position: fixed !important;
@@ -258,12 +256,15 @@ div[display="true"] {
     display: block !important;
 }
 
-@media (max-width: 576px) {
+@media screen and (max-width: 576px) {
     #search, #search-icon {
         display: none !important;
     }
     #user-icon {
         position: unset !important;
+    }
+    #app-body {
+        height: max-content !important;
     }
 }
 
