--- a/lib/src/dashboard_component/dash_home_component/dash_home_component.scss
+++ b/lib/src/dashboard_component/dash_home_component/dash_home_component.scss
@@ -7,7 +7,13 @@
   position: relative;
   padding-top: 1.5rem;
 }
-
+.nav-pills .nav-link {
+  border-radius: 0 !important;
+}
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+  background-color: unset !important;
+  border-bottom: 2px solid #0c6bd0;
+}
 .progress {
   height: 8px;
   margin-bottom: 1rem;
