--- a/lib/src/dashboard_component/dash_home_component/dash_home_component.scss
+++ b/lib/src/dashboard_component/dash_home_component/dash_home_component.scss
@@ -79,6 +79,8 @@
   height: 227px;
   overflow-x: hidden;
   overflow-y: scroll;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 .post-data-card {
   /*height: 185px;*/
